test/ci/front-end/fail/tuple.t
  $ dune exec -- raven --shh ./tuple.rav
  [Error] Index out of bounds
  [1]
